fix init parameter

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             jQuery(document).ready(function($){
                 $('body').vzv_sub_menu({
                     'headers' : 'h2, h3',
-//                    'before': false,
+                    'after': true,
+                    'speed': 800,
                     'title': 'Навигатор по контенту',
                 });
             });
