fix index.html text

--- a/index.html
+++ b/index.html
@@ -7,58 +7,116 @@
     </head>
     <body>
         <div id="my_menu"></div>
-        <h1>Новый заголовок h1</h1>
-        <p>Завод весового оборудования Весы АКСИС Украина является одним из крупнейших производителей весового оборудования и комплектующих к нему в Украине. Предлагаемые товары соответствуют международным стандартам качества, отличаются надежностью и долговечностью использования. В ассортименте весового оборудования завода представлены весы от лабораторных до автомобильных. Мы также предлагаем широкий выбор комплектующих для данного вида оборудования. Кроме производства основных комплектующих для весов завод также занимается изготовлением деталей по индивидуальным требованиям заказчика.</p>
 
-        <p>Организация производственного процесса в соответствии с современными требованиями, использование новейших технологий, позволяют производить сложные комплектующие для любого весового оборудования.</p>
+        <h1>Level One Heading</h1>
+        <p>Finally, you also have the option of an indented paragraph.&nbsp;Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras mattis consectetur purus sit amet fermentum.</p> <p>And last, and by no means least, users can also apply the <code>Address</code> tag to text like this:</p> <address>123 Example Street,
+            Testville,
+            West Madeupsburg,
+            CSSland,
+            1234</address>
+        <p>...so there you have it, all our text elements</p>
 
-        <h2>Ассортимент товара</h2>
+        <h2>Level Two Heading</h2>
+        <p>Finally, you also have the option of an indented paragraph.&nbsp;Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras mattis consectetur purus sit amet fermentum.</p> <p>And last, and by no means least, users can also apply the <code>Address</code> tag to text like this:</p> <address>123 Example Street,
+            Testville,
+            West Madeupsburg,
+            CSSland,
+            1234</address>
+        <p>...so there you have it, all our text elements</p>
 
-        <p>Ознакомиться с ассортиментом весового оборудования и комплектующим к ним Вы сможете по каталогу нашего сайта. В постоянную линейку продукции, выпускаемую заводом Весы АКСИС Украина, входят следующие комплектующие для весов:</p>
-        <h3>Новый заголовое h3</h3>
+        <h3>Level Three Heading</h3>
+
+        <p>Finally, you also have the option of an indented paragraph.&nbsp;Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras mattis consectetur purus sit amet fermentum.</p> <p>And last, and by no means least, users can also apply the <code>Address</code> tag to text like this:</p> <address>123 Example Street,
+            Testville,
+            West Madeupsburg,
+            CSSland,
+            1234</address>
+        <p>...so there you have it, all our text elements</p>
+
+        <h4>Level Four Heading</h4>
+        <p>Finally, you also have the option of an indented paragraph.&nbsp;Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras mattis consectetur purus sit amet fermentum.</p> <p>And last, and by no means least, users can also apply the <code>Address</code> tag to text like this:</p> <address>123 Example Street,
+            Testville,
+            West Madeupsburg,
+            CSSland,
+            1234</address>
+        <p>...so there you have it, all our text elements</p>
+
+        <h5>Level Five Heading</h5>
+        <table border="1">
+            <thead>
+            <tr>
+                <th>Table Head Column One</th>
+                <th>Table Head Column Two</th>
+                <th>Table Head Column Three</th>
+            </tr>
+            </thead>
+            <tfoot>
+            <tr>
+                <td>Table Footer Column One</td>
+                <td>Table Footer Column Two</td>
+                <td>Table Footer Column Three</td>
+            </tr>
+            </tfoot>
+            <tbody>
+            <tr>
+                <td>Table Row Column One</td>
+                <td>Short Text</td>
+                <td>Testing a table cell with a longer amount of text to see what happens, you're not using tables for site layouts are you?</td>
+            </tr>
+            <tr>
+                <td>Table Row Column One</td>
+                <td>Table Row Column Two</td>
+                <td>Table Row Column Three</td>
+            </tr>
+            <tr>
+                <td>Table Row Column One</td>
+                <td>Table Row Column Two</td>
+                <td>Table Row Column Three</td>
+            </tr>
+            <tr>
+                <td>Table Row Column One</td>
+                <td>Table Row Column Two</td>
+                <td>Table Row Column Three</td>
+            </tr>
+            <tr>
+                <td>Table Row Column One</td>
+                <td>Table Row Column Two</td>
+                <td>Table Row Column Three</td>
+            </tr>
+            </tbody>
+        </table>
+
+        <h6>Level Six Heading</h6>
+        <ol>
+            <li>Ordered list item one.</li>
+            <li>Ordered list item two.</li>
+            <li>Ordered list item three.</li>
+            <li>Ordered list item four.</li>
+            <li>By the way, Wordpress does not let you create nested lists through the visual editor.</li>
+        </ol>
+
         <ul>
-            <li>Тензодатчики (датчики весоизмерительные тензорезисторные);</li>
-            <li>Весовые индикаторы, предназначенные для обработки данных поступаемых от тензодатчика. У нас вы найдете индикаторы для различного вида весов.</li>
-            <li>Соединительные коробки (сумматоры), предназначенные для выравнивания показаний весов в зависимости от положения груза.</li>
-            <li>Выносные табло (дублирующие индикаторы) - дополнительное оборудование, служащее для дублирования показаний весов на более большом экране или в случае проведения торговых сделок покупатель-продавец.</li>
-            <li>Программное обеспечение для определенных видов весового оборудования, служащие для обработки, хранения и систематизации измерений.</li>
-            <li>Автоматизированные системы взвешивания позволяют более точно определять вес груза без человеческого вмешательства.</li>
-            <li>Операторские кабины, позволяющие оборудовать удобное рабочее место для персонала обслуживающего сложное весовое оборудование.</li>
+            <li>Unordered list item one.</li>
+            <li>Unordered list item two.</li>
+            <li>Unordered list item three.</li>
+            <li>Unordered list item four.</li>
+            <li>By the way, Wordpress does not let you create nested lists through the visual editor.</li>
         </ul>
 
-        <p>Все вышеперечисленные товары Вы сможете найти на страницах нашего сайта с подробным описанием технических характеристик и их стоимости. Обратившись к консультантам нашего ресурса, Вы сможете определить для себя наиболее удобное и эффективное оборудование, которое сделает работу с весами намного удобней и быстрее.</p>
+        <blockquote>
+            Currently WordPress blockquotes are just wrapped in blockquote tags and have no clear way for the user to define a source. Maybe one day they'll be more semantic (and easier to style) like the version below.
+        </blockquote>
 
-        <h2>Компания Весы АКСИС Украина предлагает оборудование только надежного качества по доступной цене.</h2>
 
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
-        <p>Весы АКСИС Украина &ndash; это отечественный производитель комплектующих для весового оборудования. Мы предлагаем доступные цены на надежные товары, предоставляем гарантию, осуществляем послегарантийное обслуживание, доставку и установку весового оборудования, обучение персонала по работе с весовыми системами и программами.</p>
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script type="text/javascript" src="vzv_sub_menu.js"></script>
         <script>
             jQuery(document).ready(function($){
                 $('body').vzv_sub_menu({
-                    'headers' : 'h2, h3',
+                    //'headers' : 'h2, h3',
                     'after': true,
                     'speed': 800,
-                    'title': 'Навигатор по контенту',
+                    'title': 'Content NAV:',
                 });
             });
         </script>
