--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </blockquote>
 
 
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
         <script type="text/javascript" src="vzv_sub_menu.js"></script>
         <script>
             jQuery(document).ready(function($){
